added active status in UserResponseDto